--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="form-body">
                 <h1 class="form-title">Venda fácil seu veículo</h1>
-                <p>Descreva as características do seu veículo e marque todas as opicionais
+                <p>Descreva as características do seu veículo e marque todas as opcionais
                     e caracteristicas que ele possui</p>
                 <form>
                     <div class="box-input">
@@ -29,8 +29,191 @@
                         <input type="text" name="title" id="title" class="block" 
                         placeholder="Defina um título para o seu veículo"
                         minlength="1" maxlength="30" required>
-                        <input type="submit" class="brn-submit" value="Cadastrar">
+                        <input type="submit"
+                        class="brn-submit"
+                        value="Cadastrar">
                     </div>
+                    <div class="box-input">
+                        <label for="price">Preço do veículo:
+                            <span class="required-field"></span></label>
+                            <input
+                            type="number"
+                            id="price"
+                            name="price"
+                            class="block"
+                            required>
+                    </div>
+                    <div class="box-input">
+                        <label>Descrição
+                            <span class="required-field"></span>
+                        </label>
+                        <textarea
+                            name="description"
+                            id="description"
+                            class="block"
+                            cols="30"
+                            rows="10"
+                            required
+                            placeholder="Descreva seu veículo">
+                        </textarea>
+                    </div>
+                    <div>
+                        <label for="unique_owner">Único dono?
+                            <span class="required-field"></span>
+                        </label>
+                        <select name="unique_owner" id="unique_owner" required>
+                            <option value="">Selecione...</option>
+                            <option value="1">Sim</option>
+                            <option value="0">Não</option>
+                        </select>
+                    </div>
+                    <div class="box-input">
+                        <label for="brand">
+                            Marca: 
+                            <span class="required-field"></span>
+                        </label>
+                        <input
+                            type="text"
+                            name="brand"
+                            id="brand"
+                            class="block" 
+                            placeholder="Defina a marca do seu veículo" required>
+                    </div>
+                    <div class="box-input">
+                        <label for="model">
+                            Modelo: 
+                            <span class="required-field"></span>
+                        </label>
+                        <input
+                            type="text"
+                            name="model"
+                            id="model"
+                            class="block" 
+                            placeholder="Defina o modelo do seu veículo" required>
+                    </div>
+                    <div class="box-input">
+                        <label for="mileage">
+                            Quilometragem: 
+                            <span class="required-field"></span>
+                        </label>
+                        <input
+                            type="text"
+                            name="mileage"
+                            id="mileage"
+                            class="block"
+                            required>
+                    </div>
+                    <div class="box-input">
+                        <label for="purchase_date">
+                            Data de compra do veículo: 
+                            <span class="required-field"></span>
+                        </label>
+                        <input
+                            type="date"
+                            name="purchase_date"
+                            id="purchase_date"
+                            class="block"
+                            required>
+                    </div>
+                    <divc class="box-input">
+                        <p>Cãmbio:<span class="required-field"></span></p>
+                        <input type="radio" id="manual" name="gear">
+                        <label for="manual">Manual</label>
+                        <input type="radio" id="auto" name="gear">
+                        <label for="manual">Automático</label>
+                    </div>
+                    <div class="optional_box">
+                        <p>Opcionais</p>
+                        <ul class="optional_list">
+                            <li>
+                                <input
+                                    type="checkbox"
+                                    id="airbag"
+                                    name="optional[]"
+                                    value="airbag">
+                            <label for="airbag">Airbag</label>
+                            </li>
+                            <li>
+                                <input
+                                    type="checkbox"
+                                    id="alarm"
+                                    name="optional[]"
+                                    value="alarm">
+                            <label for="alarm">Alarme</label>
+                            </li>
+                            <li>
+                                <input
+                                    type="checkbox"
+                                    id="ac"
+                                    name="optional[]"
+                                    value="ac">
+                            <label for="ac">Ar condicionado</label>
+                            </li>
+                            <li>
+                                <input
+                                    type="checkbox"
+                                    id="eletric_lock"
+                                    name="optional[]"
+                                    value="eletric_lock">
+                            <label for="eletric_lock">Trava elétrica</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="optional_box">
+                        <ul class="optional_list">
+                            <li>
+                                <input
+                                    type="checkbox"
+                                    id="eletric_window"
+                                    name="optional[]"
+                                    value="eletric_window">
+                            <label for="eletric_window">Vidro elétrico</label>
+                            </li>
+                            <li>
+                                <input
+                                    type="checkbox"
+                                    id="speakers"
+                                    name="optional[]"
+                                    value="speakers">
+                            <label for="speakers">Som</label>
+                            </li>
+                            <li>
+                                <input
+                                    type="checkbox"
+                                    id="reverse_camera"
+                                    name="optional[]"
+                                    value="reverse_camera">
+                            <label for="reverse_camera">Câmera traseira</label>
+                            </li>
+                            <li>
+                                <input
+                                    type="checkbox"
+                                    id="leather_seat"
+                                    name="optional[]"
+                                    value="leather_seat">
+                            <label for="leather_seat">Banco de couro</label>
+                            </li>
+                            <li>
+                                <input
+                                    type="checkbox"
+                                    id="onboard_computer"
+                                    name="optional[]"
+                                    value="onboard_computer">
+                            <label for="onboard_computer">Computador de bordo</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="box-input">
+                        <p>Envie imagens do veículo: <span class="required-field"></span>
+                        </p>
+                        <input
+                            type="file"
+                            multiple accept="image/png, image/jpeg" 
+                            id="images"
+                            name="images"
+                            required>
+                    </div>
+                    <input type="submit" class="brn-submit" value="Cadastrar">
                 </form>
             </div>
         </div>
