--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
                         <label for="title">
                             Título do anúncios:
                             <span class="required-field"></span>
-                        </label>
+                        </label><br>
                         <input type="text" name="title" id="title" class="block" 
                         placeholder="Defina um título para o seu veículo"
                         minlength="1" maxlength="30" required>
-                        <input type="submit"
-                        class="brn-submit"
-                        value="Cadastrar">
                     </div>
                     <div class="box-input">
                         <label for="price">Preço do veículo:
-                            <span class="required-field"></span></label>
+                            <span class="required-field"></span></label><br>
                             <input
                             type="number"
                             id="price"
@@ -45,7 +42,7 @@
                     </div>
                     <div class="box-input">
                         <label>Descrição
-                            <span class="required-field"></span>
+                            <span class="required-field"></span><br>
                         </label>
                         <textarea
                             name="description"
@@ -59,18 +56,18 @@
                     </div>
                     <div>
                         <label for="unique_owner">Único dono?
-                            <span class="required-field"></span>
+                            <span class="required-field"></span><br>
                         </label>
                         <select name="unique_owner" id="unique_owner" required>
                             <option value="">Selecione...</option>
                             <option value="1">Sim</option>
                             <option value="0">Não</option>
                         </select>
-                    </div>
+                    </div><br>
                     <div class="box-input">
                         <label for="brand">
                             Marca: 
-                            <span class="required-field"></span>
+                            <span class="required-field"></span><br>
                         </label>
                         <input
                             type="text"
@@ -82,7 +79,7 @@
                     <div class="box-input">
                         <label for="model">
                             Modelo: 
-                            <span class="required-field"></span>
+                            <span class="required-field"></span><br>
                         </label>
                         <input
                             type="text"
@@ -94,7 +91,7 @@
                     <div class="box-input">
                         <label for="mileage">
                             Quilometragem: 
-                            <span class="required-field"></span>
+                            <span class="required-field"></span><br>
                         </label>
                         <input
                             type="text"
@@ -106,7 +103,7 @@
                     <div class="box-input">
                         <label for="purchase_date">
                             Data de compra do veículo: 
-                            <span class="required-field"></span>
+                            <span class="required-field"></span><br>
                         </label>
                         <input
                             type="date"
@@ -125,6 +122,14 @@
                     <div class="optional_box">
                         <p>Opcionais</p>
                         <ul class="optional_list">
+                            <li>
+                                <input
+                                    type="checkbox"
+                                    id="GPS"
+                                    name="optional[]"
+                                    value="GPS">
+                            <label for="GPS">GPS</label>
+                            </li>
                             <li>
                                 <input
                                     type="checkbox"
@@ -213,7 +218,9 @@
                             name="images"
                             required>
                     </div>
-                    <input type="submit" class="brn-submit" value="Cadastrar">
+                    <div class="btn-position">
+                        <input type="submit" class="btn-submit" value="Cadastrar">
+                    </div>
                 </form>
             </div>
         </div>
